--- a/week 5/style.css
+++ b/week 5/style.css
@@ -4,10 +4,11 @@
     outline: 1px dotted line;
 }
 
-@media screen and (max-width:550px){
+/* @media screen and (max-width:450px){
     body {
         background-color: green;
         }
+
     
     .logo {
         grid-column: 1/3;
@@ -21,8 +22,11 @@
         margin-top: 10px;
         text-align: center;
     }
+    
+    
 }
 
+*/
 
 
 body {
@@ -71,16 +75,122 @@ body {
     color: #f16c65;
 }
 
-.banner{
+.banner{ 
     background-color:  #f16c65;
     padding: 1px 0;
     text-align: center;
+    border-bottom: 6px solid #ea676b;
 }
 
 .banner img {
     max-width: 780px;
     width: 90%;
+    
 }
+
+  
+
+.section one{
+    height:500px;
+    max-width: 950px;
+    padding: 65px 31px 20px;
+    border-bottom: 6px solid #ffffff;
+    background-color: #f2f2f2;
+    }
+ 
+.h1 {
+    color: #666d89;
+    margin: 65px 31px 0 ;
+    font-size: 1.6rem;
+    font-weight: bold;
+    text-align: left;
+}
+
+.p {
+    
+    color: #767e9e;
+    padding: 32px 30px 50px;
+    font-size: 0.8rem;
+    text-align: left;
+    line-height: 1.9;
+}
+
+/*#item ourservices{
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr;
+    height: auto;
+    grid-column-gap: 10px;
+    padding-left: 31px;
+    padding-right: 31px;
+}              
+*/
+#six main box{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr;
+    height: 140px;
+    grid-column-gap: 10px;
+    border: 1px solid red;    
+}
+
+.secondary box{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    
+        
+}
+
+.icon img {
+    grid-column:1fr;
+    margin-right: 10px;
+    margin-left: 10px;
+    max-width: 60px;
+    width: 90%;
+}
+
+.text {
+    grid-column:-3fr;
+    font-size:0.4rem;
+    text-align: left;
+    color: #767e9e;
+    word-wrap: break-word;
+}
+
+
+
+.section two {
+    height: 870px;
+    background-color: #2d303a;
+    border-bottom: 6px solid #323746;
+    
+}
+.h2 {
+    color: #666d89;
+    font-size:1.4rem;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
