--- a/week 5/style.css
+++ b/week 5/style.css
@@ -4,7 +4,7 @@
     outline: 1px dotted line;
 }
 
-/* @media screen and (max-width:450px){
+@media screen and (max-width:450px){
     body {
         background-color: green;
         }
@@ -26,7 +26,7 @@
     
 }
 
-*/
+
 
 
 body {
@@ -107,7 +107,6 @@ body {
 }
 
 .p {
-    
     color: #767e9e;
     padding: 32px 30px 50px;
     font-size: 0.8rem;
@@ -115,67 +114,70 @@ body {
     line-height: 1.9;
 }
 
-/*#item ourservices{
-    display: grid;
-    grid-template-columns:repeat(3, 1fr);
-    grid-template-rows: 1fr 1fr;
-    height: auto;
-    grid-column-gap: 10px;
-    padding-left: 31px;
-    padding-right: 31px;
-}              
-*/
-#six main box{
+.icon grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 1fr;
-    height: 140px;
-    grid-column-gap: 10px;
-    border: 1px solid red;    
+    height: 241px;
+    padding: 49px 29px 0;  
 }
 
-.secondary box{
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    
-        
-}
-
-.icon img {
-    grid-column:1fr;
-    margin-right: 10px;
+.six box {
     margin-left: 10px;
-    max-width: 60px;
-    width: 90%;
+    margin-right: 10px;
 }
+
+/*.six box img{
+    max-height: 60px;
+    max-width: 60px;
+     
+}
+*/
 
 .text {
-    grid-column:-3fr;
-    font-size:0.4rem;
+    font-size: 0.6rem;
+    color:#767e9e;
     text-align: left;
-    color: #767e9e;
     word-wrap: break-word;
 }
 
 
 
-.section two {
-    height: 870px;
-    background-color: #2d303a;
+#section two {
+    background-color:#2d303a;
+    height:868px;
+    max-width: 950px;
+    padding: 67px 29px 73px;
     border-bottom: 6px solid #323746;
     
 }
+
 .h2 {
     color: #666d89;
-    font-size:1.4rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-align: left;
+    padding-top: 65px 27px 0;
     
 }
 
+.p {
+    color:#666d89;
+    font-size: 0.8rem;
+    text-align: left
+}
 
+.img grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    height: 602px;
+    
+}
 
-
-
-
+.img boxes {
+     margin: 10px;
+}
 
 
 
