--- a/week 5/style.css
+++ b/week 5/style.css
@@ -177,12 +177,28 @@ body {
 
 .img boxes {
      margin: 10px;
+    height: 189px;
+    
 }
 
+.section three {
+    height: 736px;
+    background-color:#f2f2f2; 
+    border-bottom: 6px solid #ffffff;
+}
 
-
-
-
+.container {
+    display: grid;
+    grid-template-columns: repeat(3 1fr);
+    grid-template-rows:3fr 1fr;
+    
+}
+.photo {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    height: 317px;
+}
 
 
 
